lib/bait/tests/inout_error/var/not_exists.in.bt
if bad_name {}

where = 1

os.import_missing()
